--- a/minimo/index.html
+++ b/minimo/index.html
@@ -7,7 +7,7 @@
         <meta name="copyright" content="all rights belong to Anna Gryshchenko">
         <meta name="viewport" content="width=device-width, intilial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Inconsolata|Playfair+Display" rel="stylesheet">
-        <link rel="stylesheet" href="../flexbox/styles/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <section class="top">
