--- a/cv/index.html
+++ b/cv/index.html
@@ -39,28 +39,24 @@
                     </li>
                 </ul>
             </div>
-            <div class="main-foto">
-                <img src="img/mainfoto.jpg" alt="computer foto">
-            </div>
+        </div>
+        <div class="main-foto">
+            <img src="img/mainfoto.jpg" alt="computer foto">
         </div>
         <div class="aside">
-            <div class="aside-left">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, maiores tenetur officia aut quod sunt
-                    id debitis ducimus dignissimos iure, omnis suscipit. Aliquid alias aperiam beatae enim eveniet laborum
-                    dolor ut? Assumenda repudiandae eligendi amet, officiis nesciunt excepturi qui, voluptates dolorum at
-                    placeat esse optio ea molestias dignissimos nobis temporibus?</p>
-            </div>
-            <div class="aside-right">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut aliquam deleniti ullam! Rem tenetur quibusdam
-                    ab voluptates, architecto nobis laudantium suscipit molestias consectetur aperiam reprehenderit illo
-                    tempora beatae vitae saepe consequuntur illum blanditiis. Eveniet earum saepe optio architecto officiis,
-                    magnam neque quod odio ipsam minima distinctio tempora nostrum? Id nam, dolor architecto quis autem temporibus
-                    nobis? Placeat quos eaque, recusandae tempore molestiae sapiente facere ipsum blanditiis porro dolores
-                    iure ipsa eius pariatur ab enim eos, commodi illum qui, perferendis quaerat tempora dolore. Perspiciatis
-                    provident velit similique illum, odio dolorem repellendus consectetur molestiae hic enim deserunt omnis
-                    magni pariatur! Id, velit.
-                </p>
-            </div>
+            <p class="aside-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, maiores tenetur officia aut quod sunt id
+                debitis ducimus dignissimos iure, omnis suscipit. Aliquid alias aperiam beatae enim eveniet laborum dolor
+                ut? Assumenda repudiandae eligendi amet, officiis nesciunt excepturi qui, voluptates dolorum at placeat esse
+                optio ea molestias dignissimos nobis temporibus?</p>
+            <p class="aside-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut aliquam deleniti ullam! Rem tenetur quibusdam ab
+                voluptates, architecto nobis laudantium suscipit molestias consectetur aperiam reprehenderit illo tempora
+                beatae vitae saepe consequuntur illum blanditiis. Eveniet earum saepe optio architecto officiis, magnam neque
+                quod odio ipsam minima distinctio tempora nostrum? Id nam, dolor architecto quis autem temporibus nobis?
+                Placeat quos eaque, recusandae tempore molestiae sapiente facere ipsum blanditiis porro dolores iure ipsa
+                eius pariatur ab enim eos, commodi illum qui, perferendis quaerat tempora dolore. Perspiciatis provident
+                velit similique illum, odio dolorem repellendus consectetur molestiae hic enim deserunt omnis magni pariatur!
+                Id, velit.
+            </p>
         </div>
         <div class="footer">
             <p class="copyright">&#169;2017 &#171;Gryshchenko Anna&#187; &#8211; developer. My way to the junior front-end developer. Ukraine,
