--- a/maket-02/index.html
+++ b/maket-02/index.html
@@ -13,9 +13,8 @@
 <body>
     <div class="wrap">
         <header class="main-header">
-            <logo>
-                <a href="#">mart</a>
-            </logo>
+            <a class="logo" href="#">
+                <span class="decor-letter">m</span>art</a>
             <nav class="nav">
                 <ul class="menu">
                     <li class="menu-iteam">
