--- a/maket-02/index.html
+++ b/maket-02/index.html
@@ -45,72 +45,56 @@
             </header>
             <ul class="gallery-product">
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product1.png" alt="shoes">
-                    </div>
+                    <img src="img/1-layers.png" alt="shoes">
                     <div class="product">
                         <span class="name-product">Blue Tshirt</span>
                         <span class="price">$26</span>
                     </div>
                 </li>
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product2.png" alt="belt">
-                    </div>
+                    <img src="img/2-layers.png" alt="belt">
                     <div class="product">
                         <span class="name-product">WOMAN shirt</span>
                         <span class="price">$31</span>
                     </div>
                 </li>
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product3.png" alt="hat">
-                    </div>
+                    <img src="img/3-layers.png" alt="hat">
                     <div class="product">
                         <span class="name-product">YELLOW Tshirt</span>
                         <span class="price">$21</span>
                     </div>
                 </li>
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product4.png" alt="bag">
-                    </div>
+                    <img src="img/4-layers.png" alt="bag">
                     <div class="product">
                         <span class="name-product">Cool lingerie</span>
                         <span class="price">$56</span>
                     </div>
                 </li>
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product5.png" alt="bag">
-                    </div>
+                    <img src="img/5-layers.png" alt="bag">
                     <div class="product">
                         <span class="name-product">Blue Tshirt</span>
                         <span class="price">$26</span>
                     </div>
                 </li>
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product6.png" alt="belt">
-                    </div>
+                    <img src="img/6-layers.png" alt="belt">
                     <div class="product">
                         <span class="name-product">WOMAN shirt</span>
                         <span class="price">$31</span>
                     </div>
                 </li>
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product8.png" alt="shoes">
-                    </div>
+                    <img src="img/7-layers.png" alt="shoes">
                     <div class="product">
                         <span class="name-product">YELLOW Tshirt</span>
                         <span class="price">$21</span>
                     </div>
                 </li>
                 <li class="gallery-iteam">
-                    <div class="imege">
-                        <img src="img/product9.png" alt="glasses">
-                    </div>
+                    <img src="img/8-layers.png" alt="glasses">
                     <div class="product">
                         <span class="name-product">Cool lingerie</span>
                         <span class="price">$56</span>
@@ -118,6 +102,7 @@
                 </li>
             </ul>
         </section>
+
         <section class="news">
             <header class="section-header">
                 <h2 class="title">LATEST NEWS</h2>
