--- a/maket-02/index.html
+++ b/maket-02/index.html
@@ -45,60 +45,76 @@
             </header>
             <ul class="gallery-product">
                 <li class="gallery-iteam">
-                    <img src="img/1-layers.png" alt="shoes">
-                    <div class="product">
-                        <span class="name-product">Blue Tshirt</span>
-                        <span class="price">$26</span>
-                    </div>
+                    <figure>
+                        <img src="img/1-layers.png" alt="shoes">
+                        <figcaption class="product">
+                            <span class="name-product">Blue Tshirt</span>
+                            <span class="price">$26</span>
+                        </figcaption>
+                    </figure>
                 </li>
                 <li class="gallery-iteam">
-                    <img src="img/2-layers.png" alt="belt">
-                    <div class="product">
-                        <span class="name-product">WOMAN shirt</span>
-                        <span class="price">$31</span>
-                    </div>
+                    <figure>
+                        <img src="img/2-layers.png" alt="belt">
+                        <figcaption class="product">
+                            <span class="name-product">WOMAN shirt</span>
+                            <span class="price">$31</span>
+                        </figcaption>
+                    </figure>
                 </li>
                 <li class="gallery-iteam">
-                    <img src="img/3-layers.png" alt="hat">
-                    <div class="product">
-                        <span class="name-product">YELLOW Tshirt</span>
-                        <span class="price">$21</span>
-                    </div>
+                    <figure>
+                        <img src="img/3-layers.png" alt="hat">
+                        <figcaption class="product">
+                            <span class="name-product">YELLOW Tshirt</span>
+                            <span class="price">$21</span>
+                        </figcaption>
+                    </figure>
                 </li>
                 <li class="gallery-iteam">
-                    <img src="img/4-layers.png" alt="bag">
-                    <div class="product">
-                        <span class="name-product">Cool lingerie</span>
-                        <span class="price">$56</span>
-                    </div>
+                    <figure>
+                        <img src="img/4-layers.png" alt="bag">
+                        <figcaption class="product">
+                            <span class="name-product">Cool lingerie</span>
+                            <span class="price">$56</span>
+                        </figcaption>
+                    </figure>
                 </li>
                 <li class="gallery-iteam">
-                    <img src="img/5-layers.png" alt="bag">
-                    <div class="product">
-                        <span class="name-product">Blue Tshirt</span>
-                        <span class="price">$26</span>
-                    </div>
+                    <figure>
+                        <img src="img/5-layers.png" alt="bag">
+                        <figcaption class="product">
+                            <span class="name-product">Blue Tshirt</span>
+                            <span class="price">$26</span>
+                        </figcaption>
+                    </figure>
                 </li>
                 <li class="gallery-iteam">
-                    <img src="img/6-layers.png" alt="belt">
-                    <div class="product">
-                        <span class="name-product">WOMAN shirt</span>
-                        <span class="price">$31</span>
-                    </div>
+                    <figure>
+                        <img src="img/6-layers.png" alt="belt">
+                        <figcaption class="product">
+                            <span class="name-product">WOMAN shirt</span>
+                            <span class="price">$31</span>
+                        </figcaption>
+                    </figure>
                 </li>
                 <li class="gallery-iteam">
-                    <img src="img/7-layers.png" alt="shoes">
-                    <div class="product">
-                        <span class="name-product">YELLOW Tshirt</span>
-                        <span class="price">$21</span>
-                    </div>
+                    <figure>
+                        <img src="img/7-layers.png" alt="shoes">
+                        <figcaption class="product">
+                            <span class="name-product">YELLOW Tshirt</span>
+                            <span class="price">$21</span>
+                        </figcaption>
+                    </figure>
                 </li>
                 <li class="gallery-iteam">
-                    <img src="img/8-layers.png" alt="glasses">
-                    <div class="product">
-                        <span class="name-product">Cool lingerie</span>
-                        <span class="price">$56</span>
-                    </div>
+                    <figure>
+                        <img src="img/8-layers.png" alt="glasses">
+                        <figcaption class="product">
+                            <span class="name-product">Cool lingerie</span>
+                            <span class="price">$56</span>
+                        </figcaption>
+                    </figure>
                 </li>
             </ul>
         </section>
